# tildejsongen

./: LICENSE  Makefile  README.md  config-example.ini  default.nix  pyproject.toml  setup.cfg  setup.py  tildejsongen.py
.github/: renovate.json
.github/workflows/: lint.yaml  release.yaml  tests.yaml
tests/: test_funcs.py
