[project]
name = "tildejsongen"
version = "0.3.2"
description = "A simple Python script to generate a `tilde.json` file for Tilde-style servers"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Andrew Williams", email = "andy@tensixtyone.com" }
]
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
]

[project.scripts]
tildejsongen = "tildejsongen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.ruff]
lint.ignore = ["E501"]