[metadata]
name = tildejsongen
version = attr: tildejsongen.__version__
description = tildejsongen
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: System :: Systems Administration
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
home-page = https://github.com/dimension-sh/tildejsongen/
project_urls= 
    Bug Reports = https://github.com/dimension-sh/tildejsongen/issues
    Source = https://github.com/dimension-sh/tildejsongen/

[options]
zip_safe = True
py_modules = tildejsongen

[options.extras_require]
yaml = pyyaml
text = jinja2

[options.entry_points]
console_scripts =
    tildejsongen = tildejsongen:main

[flake8]
format = wemake
ignore = E501
max-line-length = 100
exclude = setup.py

[darglint]
docstring_style=sphinx